--- a/sass/blocks/_product.scss
+++ b/sass/blocks/_product.scss
@@ -429,4 +429,195 @@
       justify-content: space-between;
     }
   }
+
+  //product review
+  &-review {
+    &__content {
+      display: flex;
+      justify-content: space-between;
+      gap: 20px;
+    }
+    &__wrapper {
+      width: 100%;
+      max-width: 800px;
+
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    &__item {
+      padding-bottom: 5px;
+      border-bottom: 1px solid #EBEBEB;
+      position: relative;
+      &_stars {
+        display: flex;
+        align-items: center;
+        margin-bottom: 8px;
+      }
+      &_name {
+        color: var(--, #1A1A1A);
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 100%; /* 150% */
+
+        display: flex;
+        gap: 10px;
+
+        margin-bottom: 12px;
+        div {
+          display: flex;
+          align-items: flex-end;
+          gap: 7px;
+          color: var(--2-, #535353);
+          font-size: 12px;
+          font-weight: 400;
+          line-height: 110%; /* 133.333% */
+        }
+      }
+      &_content {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+      }
+      &_advantages, &_comment {
+        color: var(--, #1A1A1A);
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 142.857%; /* 142.857% */
+        div p {
+          color: var(--2-, #535353);
+          font-size: 14px;
+          font-weight: 300;
+          line-height: 142.857%; /* 142.857% */
+        }
+      }
+      &_images {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        a {
+          width: 98px;
+          height: 88px;
+          border-radius: 16px;
+          background: #EFEFEF;
+          overflow: hidden;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+      }
+      &_likes {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+
+        position: absolute;
+        right: 0;
+        bottom: 20px;
+        div {
+          display: flex;
+          align-items: center;
+          gap: 4px;
+
+          color: #767D83;
+          text-align: center;
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 142.857%; /* 142.857% */
+          cursor: pointer;
+          transition: all .3s ease;
+          &:hover {
+            opacity: 0.7;
+          }
+        }
+      }
+    }
+    &__aside {
+      width: 315px;
+      min-width: 315px;
+      max-width: 315px;
+      &_top {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 25px;
+        > div {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          gap: 20px;
+        }
+      }
+      &_grade {
+        color: var(--, #1A1A1A);
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 127.778%; /* 127.778% */
+      }
+      &_stars {
+        display: flex;
+        align-items: center;
+      }
+      &_all {
+        color: var(--, #1A1A1A);
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 142.857%; /* 142.857% */
+      }
+      &_wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+      }
+      &_item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 20px;
+      }
+      &_text {
+        color: var(--, #1A1A1A);
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 142.857%; /* 142.857% */
+      }
+    }
+    &__button {
+      color: #FFF;
+      text-align: center;
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 142.857%; /* 142.857% */
+
+      border-radius: 12px;
+      background: var(--1, #08A826);
+
+      display: flex;
+      width: 316px;
+      height: 44px;
+      padding: 12px;
+      justify-content: center;
+      align-items: center;
+
+      transition: all .3s ease;
+      margin-bottom: 25px;
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+    &__title {
+      display: flex;
+      align-items: center;
+      gap: 7px;
+
+      margin-bottom: 20px;
+      span {
+        color: var(--1, #08A826);
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 93.75%; /* 93.75% */
+      }
+    }
+  }
 }
