--- a/sass/blocks/media/_footer.scss
+++ b/sass/blocks/media/_footer.scss
@@ -74,6 +74,7 @@
       }
     }
     &-bottom {
+      padding-bottom: 80px;
       &__container {
         flex-direction: column;
         align-items: start;
@@ -91,10 +92,33 @@
         flex-direction: column;
       }
     }
+    &-banner {
+      &__left {
+        width: 100%;
+        font-size: 14px;
+        justify-content: center;
+      }
+      &__right {
+        width: 100%;
+        max-width: 100%;
+      }
 
-    &-bottom {
       &__container {
+        flex-direction: column;
+      }
+    }
+  }
+}
 
+@media screen and (max-width:425px)  {
+  .footer {
+    &-banner {
+      &__right {
+        flex-direction: column;
+        gap: 10px;
+        button {
+          width: 100%;
+        }
       }
     }
   }
