--- a/sass/blocks/media/_mobile-menu.scss
+++ b/sass/blocks/media/_mobile-menu.scss
@@ -7,7 +7,7 @@
     padding: 15px 16px;
     background: #FFF;
     border-radius: 15px 15px 0px 0px;
-    box-shadow: 0px -12px 37px 0px rgba(230, 235, 243, 0.50);
+    box-shadow: 0px -1px 14px 0px rgba(230, 235, 243, 0.50);
 
     position: fixed;
     bottom: 0;
@@ -27,6 +27,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      opacity: 0.7;
     }
     &__item {
       display: flex;
@@ -45,6 +46,32 @@
         color: #08A826;
         path {
           fill: #08A826;
+        }
+      }
+      &.cart {
+        .mobile-menu__ico {
+          position: relative;
+          span {
+            min-width: 16px;
+            min-height: 16px;
+
+            color: #FFF;
+            text-align: center;
+            font-size: 12px;
+            font-weight: 400;
+
+            padding: 0px 5.5px;
+            background: #535353;
+            border-radius: 50%;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            position: absolute;
+            top: -5px;
+            right: -5px;
+          }
         }
       }
       &:hover {
