--- a/sass/blocks/media/_product-card.scss
+++ b/sass/blocks/media/_product-card.scss
@@ -120,7 +120,11 @@
           position: absolute;
         }
         &-check {
-          display: none;
+          position: absolute;
+          margin: 0;
+
+          top: 20px;
+          right: 15px;
         }
         &-bottom {
           align-items: flex-start;
@@ -129,6 +133,7 @@
           width: 100%;
           &__content {
             padding-left: 130px;
+            padding-right: 20px;
             flex-direction: column;
             position: relative;
           }
